Fix alignment of grid on mobile and desktop

--- a/css/redesign.css
+++ b/css/redesign.css
@@ -10,6 +10,11 @@ body {
   font-family: Lato;
 }
 
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 * {
   box-sizing: inherit;
 }
@@ -75,22 +80,24 @@ body {
   margin: 0 8px;
 }
 
-.video-container {
-  display: flex;
-  width: 100%;
-  position: relative;
-  display: block;
-  margin: auto;
-}
-
+/* _____ Banner Styles _____ */
 .banner-slider {
   height: 50vh;
   max-height: 50vh;
 }
 
-.banner-video {
+.slide-container {
+  display: flex;
   width: 100%;
-  min-height: 50vh;
+  position: relative;
+  display: block;
+  margin: auto;
+  overflow: hidden;
+}
+
+.slide-media {
+  width: 100%;
+  height: 50vh;
   object-fit: cover;
 }
 
@@ -102,21 +109,28 @@ body {
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
+.items-grid {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-auto-rows: max-content;
+}
+
 .items-grid > * {
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   background-color: black;
   width: 100%;
   height: 100%;
   position: relative;
 }
-.items-grid > *::before {
+/* .items-grid > *::before {
   content: "";
   display: inline-block;
   width: 1px;
   height: 0;
   padding-bottom: calc(100% / (var(--aspect-ratio)));
-}
+} */
 
 .span-1 {
   grid-column: auto/ span 1;
@@ -206,12 +220,24 @@ body {
 }
 
 .block-contents {
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
   color: white;
   padding: 16px;
+  overflow: hidden;
+  height: 100%;
+  min-height: 300px;
+}
+
+.video-block {
+  padding: 0;
+}
+.video-block-container {
+  width: 100%;
+  height: 100%;
+}
+.video-block-video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 /* block typography */
@@ -223,12 +249,14 @@ body {
 }
 
 .block-big-heading {
-  font-size: 82px;
+  font-size: 52px;
   margin: 0 40px 20px;
   line-height: 0.85em;
 }
 
 .footer {
+  max-width: 1600px;
+  width: 100%;
   background: #232323;
   padding: 40px 40px;
   color: #dadada;
@@ -243,6 +271,7 @@ body {
 
 .footer h2 {
   margin: 0 0 12px;
+  color: #bababa;
 }
 
 .footer a {
@@ -329,6 +358,15 @@ ul.slick-dots li button:before {
   .span-3-2 {
     grid-column: auto/ span 1;
     --aspect-ratio: 1/1;
+  }
+
+  .block-small-heading {
+    margin: 0 0 20px;
+  }
+
+  .block-big-heading {
+    font-size: 28px;
+    margin: 0 0 20px;
   }
 
   .footer {
